--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -5,7 +5,7 @@ nltk==3.8.1
 tensorboard==2.15.2
 optimum==1.20.0
 accelerate==0.27.2
-torch==2.1.0
+torch>=2.1.0
 peft==0.11.1
 --extra-index-url https://huggingface.github.io/autogptq-index/whl/cu117/
 auto-gptq==0.7.1
