update config yaml file

--- a/model/main_config.yaml
+++ b/model/main_config.yaml
@@ -5,7 +5,7 @@
 "reference_model_path": "bigscience/bloom-1b7" # The repo id of your pretrained reference model
 "quantized_policy_model_path": "Veture/merged_autoGPTQ_dpo" # Your path to the final quantized checkpoint
 #"rag_policy_model_path": "./checkpoints/best_model_rag/" # Your path to the final RAG checkpoint
-#"test_data_path": "./datasets/mcqa_test_set.jsonl" # Your path to the test data
+"test_data_path": "./datasets/mcqa_test_set.jsonl" # Your path to the test data
 "dpo_model_args": null # Put any model arguments required to load your DPO model below
 # "rag_model_args": # Put any model arguments required to load your rag model below
 #   "encoder_model_path": "facebook/bart-large"
